<resources>
    <string name="app_name">Counter App</string>

    <string name="error_explore_state">Error:\nCouldn\'t load data.</string>
    <string name="error_general">Oops! Something went wrong</string>

    <string name="action_retry">Retry</string>

    <string name="explore_title">Counter App</string>
    <string name="explore_header">Items</string>

    <string name="detail_title">Detail</string>
    <string name="detail_start">Start</string>
    <string name="detail_stop">Stop</string>
    <string name="detail_preset_1">30\nsec</string>
    <string name="detail_preset_2">2\nmin</string>
    <string name="detail_preset_3">10\nmin</string>
    <string name="detail_preset_4">30\nmin</string>
    <string name="detail_header">Set time to count</string>

    <string name="notification_running_format">%d running</string>
</resources>
