<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:singleLine="true"
        android:text="@string/detail_header"
        android:textAllCaps="true" />

    <com.lucasurbas.counter.ui.detail.widget.CounterView
        android:id="@+id/counter_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cv_primaryTextSize="12sp"
        app:cv_secondaryTextSize="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00:00" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter_view" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_stop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter_view" />

    <Button
        android:id="@+id/preset_1_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/detail_preset_1"
        app:layout_constraintBottom_toTopOf="@+id/counter_view"
        app:layout_constraintEnd_toStartOf="@+id/preset_2_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_view" />

    <Button
        android:id="@+id/preset_2_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_preset_2"
        app:layout_constraintBottom_toTopOf="@+id/counter_view"
        app:layout_constraintEnd_toStartOf="@+id/preset_3_button"
        app:layout_constraintStart_toEndOf="@+id/preset_1_button"
        app:layout_constraintTop_toBottomOf="@+id/header_view" />

    <Button
        android:id="@+id/preset_3_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_preset_3"
        app:layout_constraintBottom_toTopOf="@+id/counter_view"
        app:layout_constraintEnd_toStartOf="@+id/preset_4_button"
        app:layout_constraintStart_toEndOf="@+id/preset_2_button"
        app:layout_constraintTop_toBottomOf="@+id/header_view" />

    <Button
        android:id="@+id/preset_4_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:text="@string/detail_preset_4"
        app:layout_constraintBottom_toTopOf="@+id/counter_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/preset_3_button"
        app:layout_constraintTop_toBottomOf="@+id/header_view" />

</android.support.constraint.ConstraintLayout>